--- a/.github/workflows/migrate-to-gha.yml
+++ b/.github/workflows/migrate-to-gha.yml
@@ -184,7 +184,6 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ steps.artifact-name.outputs.name }}
-          path: |
-            migration-repo/migrated/ricardops2211/
+          name: migrated-files
+          path: migration-repo/migrated
           retention-days: 7
