--- a/.github/workflows/migrate-to-gha.yml
+++ b/.github/workflows/migrate-to-gha.yml
@@ -190,6 +190,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: richie-migrated
-          path: artifacts/**
+          path: migration-repo/migrated/**
           retention-days: 7
 
