--- a/.github/workflows/migrate-to-gha.yml
+++ b/.github/workflows/migrate-to-gha.yml
@@ -125,9 +125,11 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.artifact-name.outputs.name }}
-          path: migration-repo/migrated
+          path: migration-repo/artifacts
           if-no-files-found: warn
           retention-days: 7
+
+
 
 
 
