--- a/.github/workflows/migrate-to-gha.yml
+++ b/.github/workflows/migrate-to-gha.yml
@@ -120,13 +120,15 @@ jobs:
           SAFE_NAME=$(echo "${{ matrix.config.repo }}" | sed 's/\//-/g')
           echo "name=migrated-${SAFE_NAME}-${{ matrix.config.branch }}" >> $GITHUB_OUTPUT
 
-      - name: Subir Artifacts directo
+      - name: Subir Artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: direct-test
-          path: migration-repo/artifacts/ricardops2211
-          retention-days: 1
+          name: ${{ steps.artifact-name.outputs.name }}
+          path: migration-repo/artifacts
+          if-no-files-found: warn
+          retention-days: 7
+
 
 
 
