--- a/.github/workflows/migrate-to-gha.yml
+++ b/.github/workflows/migrate-to-gha.yml
@@ -122,13 +122,11 @@ jobs:
       - name: Subir Artifacts
         if: always()
         uses: actions/upload-artifact@v4
-        # ¡NO pongas working-directory aquí!
         with:
           name: ${{ steps.artifact-name.outputs.name }}
-          path: migration-repo/artifacts
+          path: ${{ github.workspace }}/migration-repo/artifacts
           if-no-files-found: warn
           retention-days: 7
-
 
 
 
