--- a/.github/workflows/migracion-kyndryl.yml
+++ b/.github/workflows/migracion-kyndryl.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Build Matrix
         id: build
         run: |
-          MATRIX=$(jq -c '[ 
-            .[] 
+          MATRIX=$(jq -c '[
+            .[]
             | (.branches // [.branch // "master"]) as $b
             | $b[] as $branch
             | {
@@ -61,35 +61,21 @@ jobs:
           token: ${{ secrets.GH_PAT }}
           path: source
 
-      - name: Detect files
-        id: files
-        run: |
-          FILES=$(find source -type f \
-            \( -name "*.groovy" -o -name "Jenkinsfile*" -o -name "*.yml" -o -name "*.yaml" \) \
-            -not -path "*/.git/*" -printf '%P\n')
-
-          echo "files<<EOF" >> $GITHUB_OUTPUT
-          echo "$FILES" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-
-      - name: Run Migration Engine
-        if: steps.files.outputs.files != ''
+      - name: Run Migration
         working-directory: platform
         env:
-          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
-          GROQ_MODEL: llama-3.3-70b-versatile
+          SOURCE_DIR: ../source
           REPO_NAME: ${{ matrix.config.repo }}
           BRANCH_NAME: ${{ matrix.config.branch }}
           TYPE: ${{ matrix.config.type }}
           JENKINS_PATH: ${{ matrix.config.jenkins_path }}
           SHARED_LIB_PATHS: ${{ toJson(matrix.config.shared_lib_path) }}
-          FILES_TO_MIGRATE: ${{ steps.files.outputs.files }}
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           chmod +x scripts/migrate-with-ai.sh
           scripts/migrate-with-ai.sh
 
-      - name: Upload artifacts
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: migration-${{ matrix.config.repo }}-${{ matrix.config.branch }}
