--- a/repos-config.json
+++ b/repos-config.json
@@ -1,9 +1,8 @@
 [
   {
-    "repo": "ricardops2211/richie-jenkins-shared-lib",
-    "branches": ["master"],
-    "shared_lib_path": "vars/",
-    "jenkins_path": "Jenkinsfile-example",
+    "repo": "iclouddevops/jenkinslib",
+    "branches": ["main"],
+    "shared_lib_path": "src/",
     "type": "jenkins"
   },
   {
@@ -13,15 +12,21 @@
     "type": "jenkins"
   },
   {
-    "repo": "ricardops2211/richie-azure-devops-templates",
-    "branch": "master",
-    "shared_lib_path": "templates/",
-    "type": "azure"
+    "repo": "minaxijoshi3101/devops-sharedlibrary",
+    "branch": "main",
+    "shared_lib_path": "src/",
+    "type": "jenkins"
   },
   {
-    "repo": "ricardops2211/richie-jenkins-shared-lib",
-    "branches": ["databricks"],
-    "shared_lib_path": ["vars/", "src/"],
+    "repo": "vanroon/SharedLibraryRoon",
+    "branches": ["master"],
+    "shared_lib_path": ["resources/", "src/", "vars/"],
+    "type": "jenkins"
+  },
+  {
+    "repo": "naveenverma005/Shared-Library",
+    "branches": ["main"],
+    "shared_lib_path": ["vars/"],
     "type": "jenkins"
   }
 ]
